--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,7 @@
     }
 
     .hero-content {
+      padding-top: 90px;
       padding: 2rem;
       z-index: 2;
       max-width: 800px;
@@ -292,6 +293,10 @@
 
       /* Responsive adjustments */
       @media (max-width: 768px) {
+        .hero-content {
+          padding-top: 110px;
+        }
+        
         .hero h1 {
           font-size: 3rem;
         }
